<resources>
    <string name="app_name">Catch The Phrase</string>
    <string name="settings_activity">Settings</string>

    <!-- main menu labels -->
    <string name="play">New Game</string>
    <string name="how_to_play">How To Play</string>
    <string name="settings">Settings</string>

    <!-- SettingsActivity -->
    <string name="categories">Categories</string>
    <string name="people_characters">Real People &amp; Fictional Characters</string>
    <string name="animals_insects">Animals &amp; Insects</string>
    <string name="household">Household Items</string>
    <string name="food_drink">Food &amp; Drink</string>
    <string name="words_phrases">Common words &amp; phrases</string>

    <!-- GameplayActivity  -->
    <string name="default_clue">Tap To\nStart</string>
    <string name="continue_clue">Tap To\nContinue</string>

    <!-- ScoreboardActivity -->
    <string name="award_point">Award Point</string>
    <string name="team_one">Team 1</string>
    <string name="team_two">Team 2</string>

    <!-- Conclusion of a full game -->
    <string name="team_one_wins">Team 1\nWins!</string>
    <string name="team_two_wins">Team 2\nWins!</string>

    <!-- How-To-Play strings for InstructionActivity -->
    <string name="overview_heading">Overview</string>
    <string name="overview">
        Catch the Phrase is a hot potato word game for two teams. When the game begins, a timer will
        start and the app will display one clue at a time. The player holding the app device must
        describe the clue until their teammates successfully guess it. Then, the device will be
        passed to a player on the opposite team and this process will repeat with a new clue. To
        advance to the next clue, the screen may be tapped or swiped. When the timer runs out, the
        \"timeup\" sound will play, and the team not holding the device will be awarded a point. The
        first team to score 7 points wins.
    </string>
    <string name="rules_heading">Rules</string>
    <string name="rules_subheading_one">
        When describing a clue, a player must NOT:</string>
    <string name="rules_body_one">
        \t&#8226; \u00A0Say what letter it starts with.\n
        \t&#8226; \u00A0Say what words it rhymes with.\n
        \t&#8226; \u00A0Say how many syllables it has.\n
        \t&#8226; \u00A0Say a word in the clue (e.g. \"holy\" in \"holy cow!\").
    </string>
    <string name="rules_subheading_two">
        When describing a clue, a player MAY:</string>
    <string name="rules_body_two">
        \t&#8226; \u00A0Use body language and physical gestures.\n
        \t&#8226; \u00A0Use synonyms, so long as they don\'t rhyme.\n
    </string>

</resources>
