<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.diggs.keenan.catchthephrase.SettingsActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/categories"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <CheckBox
            android:id="@+id/checkbox_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/people_characters"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkbox_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/food_drink"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkbox_animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/animals_insects"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkbox_household"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/household"
            android:onClick="onCheckboxClicked"/>

        <CheckBox
            android:id="@+id/checkbox_words"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/words_phrases"
            android:onClick="onCheckboxClicked"/>

    </LinearLayout>
</ScrollView>
