<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.diggs.keenan.catchthephrase.ScoreboardActivity">

    <TextView android:id="@+id/scoreboard_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:gravity="center"
        android:background="@drawable/background_stripe"
        android:text="@string/award_point"
        android:textSize="30sp"
        android:textColor="@color/scoreboard_text"
        android:textStyle="bold" />

    <Button android:id="@+id/team_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="16dp"
        android:background="@drawable/button_menu"
        android:text="@string/team_one"
        android:textSize="20sp"
        android:textColor="@drawable/button_text_color" />

    <Button android:id="@+id/team_two"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/button_menu"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/team_two"
        android:textSize="20sp"
        android:textColor="@drawable/button_text_color" />

</LinearLayout>
